--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap');
 @tailwind base;
 @tailwind components;
+
+html {
+    scroll-behavior: smooth;
+}
+body {
+    background-color: #333333;
+    color: white
+}
 @tailwind utilities;
