--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background-color: #333333;
-    color: white
+    background-color: #171717;
+    color: #f5f5f5;
 }
 @tailwind utilities;
